fix: add get by id sponsor
