# src/main/java/com/footballclub/prog3td2/controller/SponsorController.java
@@ -5,6 +5,7 @@ import com.footballclub.prog3td2.controller.dto.SponsorDto;
 import com.footballclub.prog3td2.controller.mapper.SponsorMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -20,5 +21,12 @@ public class SponsorController {
     @GetMapping
     public List<SponsorDto> getAllSponsors() {
         return sponsorService.getAll().stream().map(sponsorMapper::toRest).toList();
+    }
+
+    @GetMapping(value = "/{id}")
+    public SponsorDto getSponsor(@PathVariable Integer id) {
+        return sponsorMapper.toRest(
+                sponsorService.getById(id)
+        );
     }
 }
